
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

#add_subdirectory ( gtest )
#add_subdirectory ( py-test )

# ===================================================================
#  ソースファイルの設定
# ===================================================================

set ( fraig_SOURCES
  FraigMgr.cc
  FraigMgrImpl.cc
  FraigHandle.cc
  FraigHash.cc
  FraigNode.cc
  PatHash.cc
  StructHash.cc
  Bn2FraigConv.cc
  )


# ===================================================================
# ターゲットの設定
# ===================================================================

ym_add_object_library ( ym_fraig
  ${fraig_SOURCES}
  )
